--- a/step-1/README.adoc
+++ b/step-1/README.adoc
@@ -1,5 +1,3 @@
-:imagesdir: step-1/images
-
 = A minimally viable wiki written with Vert.x
 
 We are going to start with a first iteration with the simplest code possible to have a wiki written with Vert.x.
@@ -232,7 +230,7 @@ Each handlers deals with a HTTP request, performs a database query, and renders 
 
 The index page provides a list of pointers to all wiki entries and a field to create a new one:
 
-image::index.png[Wiki index]
+image::images/index.png[Wiki index]
 
 The implementation is a straightforward `select *` SQL query where data is then passed to the FreeMarker engine to render the HTML response.
 
@@ -276,12 +274,12 @@ include::src/main/resources/templates/footer.ftl[]
 
 This handler deals with HTTP GET requests to have wiki pages being rendered, as in:
 
-image::page.png[Wiki page]
+image::images/page.png[Wiki page]
 
 The page also provides a button to edit the content in Markdown.
 Instead of having a separate handler and template, we simply rely on JavaScript and CSS to toggle the editor on and off when the button is being clicked:
 
-image::edit.png[Wiki editor]
+image::images/edit.png[Wiki editor]
 
 The `pageRenderingHandler` method code is the following:
 
