--- a/step-5/README.adoc
+++ b/step-5/README.adoc
@@ -1,5 +1,3 @@
-:imagesdir: step-5/images
-
 = Integrating with a 3rd-party web service
 
 TIP: The corresponding source code is in the `step-5` folder of the guide repository.
@@ -22,15 +20,15 @@ We are going to leverage this feature to backup our wiki pages as Gists.
 
 A new button is going to be added on the wiki index page:
 
-image::backup-button.png[]
+image::images/backup-button.png[]
 
 Cliking the _backup_ button will trigger the creating of a Gist:
 
-image::gist-created.png[]
+image::images/gist-created.png[]
 
 A backup Gist consists of 1 file per wiki page, with the content being the raw Markdown text:
 
-image::gist.png[]
+image::images/gist.png[]
 
 == The web client API
 
