--- a/step-6/README.adoc
+++ b/step-6/README.adoc
@@ -1,5 +1,3 @@
-:imagesdir: step-6/images
-
 = Exposing a web API
 
 TIP: The corresponding source code is in the `step-6` folder of the guide repository.
@@ -14,7 +12,7 @@ We are going to expose a web API with the following URL scheme:
 
 Here is a screenshot of interacting with the API using the https://httpie.org/[HTTPie command-line tool]:
 
-image::webapi-httpie.png[]
+image::images/webapi-httpie.png[]
 
 == Web sub-routers
 
