Fixes #3 Verticle deployment order
Use sequential composition instead of parallel composition.

--- a/step-2/README.adoc
+++ b/step-2/README.adoc
@@ -57,7 +57,7 @@ The rest of the verticle code consists in the router handlers that also use the 
 ----
 include::src/main/java/io/vertx/guides/wiki/HttpServerVerticle.java[tags=rest]
 ----
- 
+
 == The database verticle
 
 Connecting to a database using JDBC requires of course a driver and configuration, which we had hard-coded in the first iteration.
@@ -125,10 +125,11 @@ include::src/main/java/io/vertx/guides/wiki/MainVerticle.java[tags=main]
 ----
 <1> Deploying a verticle is an asynchronous operation, so we need a `Future` for that. The `String` parametric type is because a verticle gets an identifier when successfully deployed.
 <2> One option is to create a verticle instance with `new`, and pass the object reference to the `deploy` method. The `completer` return value is a handler that simply completes its future.
-<3> A class name as a string is also an option to specify a verticle to deploy. For other JVM languages string-based conventions allow a module / script to be specified.
-<4> The `DeploymentOption` class allows to specify a number of parameters and especially the number of instances to deploy.
-<5> A `CompositeFuture` is a future on top of other futures. Here the resulting future completes when both `httpVerticleDeployment` and `dbVerticleDeployment` complete, or fails when either of them fails.
-<6> We define a handler that eventually completes the `MainVerticle` start future.
+<3> Sequential composition with `compose` allows to run one asynchronous operation after the other. When the initial future completes successfully, the composition function is invoked.
+<4> A class name as a string is also an option to specify a verticle to deploy. For other JVM languages string-based conventions allow a module / script to be specified.
+<5> The `DeploymentOption` class allows to specify a number of parameters and especially the number of instances to deploy.
+<6> The composition function returns the next future. Its completion will trigger the completion of the composite operation.
+<7> We define a handler that eventually completes the `MainVerticle` start future.
 
 The astute reader will probably wonder how we can deploy the code for a HTTP server on the same TCP port twice and not expect any error for either of the instances, since the TCP port will already be in use.
 With many web framework we would need to choose different TCP ports, and have a frontal HTTP proxy to perform load balancing between the ports.
